Add Allure Report and logging into pom.xml